# wordsniffer

./: .env.example  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  test.db
.github/workflows/: cd.yml  ci.yml
artifacts/api-server/: build.ts
artifacts/frontend/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/frontend/.replit-artifact/: artifact.toml
artifacts/frontend/src/: App.tsx  index.css
artifacts/frontend/src/components/: DictionaryPanel.tsx  FetchPanel.tsx  GlitchText.tsx  MatrixRain.tsx  SearchPanel.tsx
artifacts/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx
artifacts/frontend/src/context/: CountContext.tsx
artifacts/frontend/src/hooks/: use-api.ts
artifacts/frontend/src/pages/: Home.tsx
artifacts/python-api/: .dockerignore  .gitignore  Dockerfile  config.py  db.py  main.py  pyproject.toml  requirements.txt
artifacts/python-api/models/: __init__.py  paragraph.py
artifacts/python-api/routes/: dictionary.py  fetch.py  paragraphs.py  search.py
artifacts/python-api/services/: external_api.py  text_processing.py
artifacts/python-api/tests/: conftest.py  test_endpoints.py  test_text_processing.py
